--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,12 @@ body {
         padding-bottom: 13%;
     }
 }
+.navbar .nav .nav-item a:hover {
+    border-radius: 75px;
+    background-image: linear-gradient(45deg, rgb(138, 65, 116), #c7d322);
+    border: none;
+    filter: drop-shadow(1px 1px 5px rgb(92, 35, 84));
+}
 
 .navBorder{
     background: linear-gradient(to top, #ffe838, #fd57bf);
@@ -40,7 +46,6 @@ body {
 }
 
 .nav-link {
-    color: black !important;
     font-weight: bolder;
     font-size: 125%;
 }
@@ -136,17 +141,19 @@ body {
     width: 100%;
     height: 100%;
     padding: 2%;;
-    border-style: solid;
-    border-color: #fd57bf;
-    border-width: medium;
     margin: 3%;
     margin-bottom: 5%;
     margin-top: 5%;
+    border-radius: 10%;
 }
 
 .projectName {
     color: black !important;
     font-weight: bolder;
+}
+
+.imgContainer .imgMod{
+    box-shadow: 10px 10px 5px grey;
 }
 
 .contact {
@@ -199,6 +206,9 @@ button:hover {
     color: #221e3f;
     font-size: 2rem;
     margin: auto;
+}
+#heart{
+    color: red;
 }
 
 .copyright p{
